--- a/src/index.css
+++ b/src/index.css
@@ -161,6 +161,10 @@ code {
   font-size: 12px;
 }
 
+.ant-descriptions-bordered .ant-descriptions-view {
+  border: 0px; 
+}
+
 .ant-descriptions-header {
   border-bottom:#d0d0d0 1px solid;
   margin-bottom: 5px;
@@ -173,6 +177,7 @@ code {
 
 .ant-descriptions-item-label {
   font-size: 12px;
+  color: #b57800;
 }
 
 .ant-descriptions-item-content {
@@ -180,7 +185,20 @@ code {
 }
 
 .ant-descriptions-small .ant-descriptions-row > th, .ant-descriptions-small .ant-descriptions-row > td {
-  padding-bottom: 2px;
+  padding-bottom: 4px;
+}
+
+.ant-descriptions-bordered.ant-descriptions-small .ant-descriptions-item-label, .ant-descriptions-bordered.ant-descriptions-small .ant-descriptions-item-content{
+  padding: 3px 4px;
+  border-right: 0px;
+}
+
+.ant-descriptions-bordered .ant-descriptions-row {
+  border-bottom: 1px solid #f3f3f3;
+}
+
+.ant-descriptions-bordered .ant-descriptions-item-label {
+  background-color: #ffffff;
 }
 
 
