--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ code {
   float: left;
 }
 
+.ant-layout-content {
+  background: gray;
+  margin: 7px 7px;
+}
+
 .ant-layout-header {
   height: 40px;
   line-height: 40px;
@@ -58,12 +63,17 @@ code {
 }
 
 .ant-table table {
-  border: 1px solid #d9d9d9;
+  border: 1px solid #c1c1c1;
 }
 
 .ant-table-tbody > tr.ant-table-row:hover > td {
   background: #e9f5ff;
 }
+
+.ant-table-tbody > tr > td {
+  border-bottom: 1px solid #c1c1c1;
+}
+
 .ant-table.ant-table-small {
   font-size: 11px;
 }
@@ -219,4 +229,25 @@ code {
 .ant-divider-horizontal.ant-divider-with-text {
   margin: 8px 0;
   font-size: 14px;
+}
+
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab, .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
+  border: 1px solid #b9b9b9;
+}
+
+.ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::before, .ant-tabs-top > div > .ant-tabs-nav::before, .ant-tabs-bottom > div > .ant-tabs-nav::before {
+  border-bottom: 1px solid #b9b9b9;
+}
+
+.ant-form-vertical .ant-form-item-label, .ant-col-24.ant-form-item-label, .ant-col-xl-24.ant-form-item-label {
+  padding: 0px 0px;
+}
+
+.ant-input-affix-wrapper {
+  padding: 0px 4px;
+}
+
+.ant-modal-body {
+  padding: 10px;
+  font-size: 12px;
 }
