--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ code {
 }
 
 .ant-form-item {
-  margin-bottom: 2px;
+  margin-bottom: 1px;
 }
 
 .ant-form-item-label > label {
@@ -250,4 +250,8 @@ code {
 .ant-modal-body {
   padding: 10px;
   font-size: 12px;
+}
+
+.ant-alert {
+  padding: 4px 5px;
 }
