Se borran algunos logs, ya funciona sumillas recibidas, y oficios con paginacion. De aqui en adelante se intenta entender y corregir el mensaje useEffect has a missing dependency

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
 }
 
 .ant-layout-content {
-  background: gray;
+  background: white;
   margin: 7px 7px;
 }
 
@@ -260,4 +260,22 @@ code {
 .ant-menu-vertical > .ant-menu-item, .ant-menu-vertical-left > .ant-menu-item, .ant-menu-vertical-right > .ant-menu-item, .ant-menu-inline > .ant-menu-item, .ant-menu-vertical > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-left > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-right > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
   height: 25px;
   line-height: 25px;
+}
+
+.ant-menu-sub.ant-menu-inline > .ant-menu-item, .ant-menu-sub.ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+  height: 30px;
+  line-height: 30px;
+  list-style-position: inside;
+  list-style-type: disc;
+}
+
+.ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal) .ant-menu-item-selected {
+  background-color: #003a69;
+}
+
+.ant-radio-button-wrapper {
+  height: 28px;
+  padding: 0 10px;
+  font-size: 12px;
+  line-height: 28px;
 }
